--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <div id="mytable"></div>
-     <script src="dist/build.js"></script>
+<!--     <div id="mytable"></div>
+ -->     <script src="dist/build.js"></script>
   </body>
 </html>
